// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: closed 1`] = `
<div
  className="dropdown"
>
  <Toggler
    closeOnClickOutside={true}
    closeOnEscape={true}
    onRequestClose={[Function]}
    open={false}
    overlay={
      <DropdownOverlay
        noPadding={true}
        placement="bottom"
      >
        <StatusSelection
          hotspot={
            Object {
              "assignee": "assignee",
              "assigneeUser": Object {
                "active": true,
                "local": true,
                "login": "assignee",
                "name": "John Doe",
              },
              "author": "author",
              "authorUser": Object {
                "active": true,
                "local": true,
                "login": "author",
                "name": "John Doe",
              },
              "canChangeStatus": true,
              "changelog": Array [],
              "comment": Array [],
              "component": Object {
                "key": "hotspot-component",
                "longName": "Hotspot component long name",
                "name": "Hotspot Component",
                "path": "path/to/component",
                "qualifier": "FIL",
              },
              "creationDate": "2013-05-13T17:55:41+0200",
              "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
              "line": 142,
              "message": "'3' is a magic number.",
              "project": Object {
                "key": "hotspot-component",
                "longName": "Hotspot component long name",
                "name": "Hotspot Component",
                "path": "path/to/component",
                "qualifier": "TRK",
              },
              "resolution": "FIXED",
              "rule": Object {
                "fixRecommendations": "<p>This a <strong>strong</strong> message about fixing !</p>",
                "key": "squid:S2077",
                "name": "That rule",
                "riskDescription": "<p>This a <strong>strong</strong> message about risk !</p>",
                "securityCategory": "sql-injection",
                "vulnerabilityDescription": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
                "vulnerabilityProbability": "HIGH",
              },
              "status": "REVIEWED",
              "textRange": Object {
                "endLine": 142,
                "endOffset": 83,
                "startLine": 142,
                "startOffset": 26,
              },
              "updateDate": "2013-05-13T17:55:42+0200",
              "users": Array [
                Object {
                  "active": true,
                  "local": true,
                  "login": "assignee",
                  "name": "John Doe",
                },
                Object {
                  "active": true,
                  "local": true,
                  "login": "author",
                  "name": "John Doe",
                },
              ],
            }
          }
          onStatusOptionChange={[Function]}
        />
      </DropdownOverlay>
    }
  >
    <div
      aria-expanded={false}
      aria-haspopup={true}
      className="padded bordered display-flex-column display-flex-justify-center"
      id="status-trigger"
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="display-flex-center display-flex-space-between"
      >
        <StatusDescription
          showTitle={true}
          statusOption="FIXED"
        />
        <ChevronDownIcon
          className="big-spacer-left"
        />
      </div>
    </div>
  </Toggler>
</div>
`;

exports[`should render correctly: open 1`] = `
<div
  className="dropdown"
>
  <Toggler
    closeOnClickOutside={true}
    closeOnEscape={true}
    onRequestClose={[Function]}
    open={true}
    overlay={
      <DropdownOverlay
        noPadding={true}
        placement="bottom"
      >
        <StatusSelection
          hotspot={
            Object {
              "assignee": "assignee",
              "assigneeUser": Object {
                "active": true,
                "local": true,
                "login": "assignee",
                "name": "John Doe",
              },
              "author": "author",
              "authorUser": Object {
                "active": true,
                "local": true,
                "login": "author",
                "name": "John Doe",
              },
              "canChangeStatus": true,
              "changelog": Array [],
              "comment": Array [],
              "component": Object {
                "key": "hotspot-component",
                "longName": "Hotspot component long name",
                "name": "Hotspot Component",
                "path": "path/to/component",
                "qualifier": "FIL",
              },
              "creationDate": "2013-05-13T17:55:41+0200",
              "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
              "line": 142,
              "message": "'3' is a magic number.",
              "project": Object {
                "key": "hotspot-component",
                "longName": "Hotspot component long name",
                "name": "Hotspot Component",
                "path": "path/to/component",
                "qualifier": "TRK",
              },
              "resolution": "FIXED",
              "rule": Object {
                "fixRecommendations": "<p>This a <strong>strong</strong> message about fixing !</p>",
                "key": "squid:S2077",
                "name": "That rule",
                "riskDescription": "<p>This a <strong>strong</strong> message about risk !</p>",
                "securityCategory": "sql-injection",
                "vulnerabilityDescription": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
                "vulnerabilityProbability": "HIGH",
              },
              "status": "REVIEWED",
              "textRange": Object {
                "endLine": 142,
                "endOffset": 83,
                "startLine": 142,
                "startOffset": 26,
              },
              "updateDate": "2013-05-13T17:55:42+0200",
              "users": Array [
                Object {
                  "active": true,
                  "local": true,
                  "login": "assignee",
                  "name": "John Doe",
                },
                Object {
                  "active": true,
                  "local": true,
                  "login": "author",
                  "name": "John Doe",
                },
              ],
            }
          }
          onStatusOptionChange={[Function]}
        />
      </DropdownOverlay>
    }
  >
    <div
      aria-expanded={true}
      aria-haspopup={true}
      className="padded bordered display-flex-column display-flex-justify-center"
      id="status-trigger"
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="display-flex-center display-flex-space-between"
      >
        <span
          className="h3"
        >
          hotspots.status.select_status
        </span>
        <ChevronDownIcon
          className="big-spacer-left"
        />
      </div>
    </div>
  </Toggler>
</div>
`;

exports[`should render correctly: readonly 1`] = `
<div
  className="dropdown"
>
  <Tooltip
    overlay="hotspots.status.cannot_change_status"
    placement="bottom"
  >
    <div
      aria-expanded={false}
      aria-haspopup={true}
      className="padded bordered display-flex-column display-flex-justify-center readonly"
      id="status-trigger"
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="display-flex-center display-flex-space-between"
      >
        <StatusDescription
          showTitle={true}
          statusOption="FIXED"
        />
      </div>
    </div>
  </Tooltip>
</div>
`;
